@@ -100,7 +100,8 @@ class FaceEmbedding : public detail::FaceEmbeddingBase<dim, subdim> {
          * Default constructor.  This object is unusable until it has
          * some data assigned to it using <tt>operator =</tt>.
          *
-         * \ifacespython Not present.
+         * \ifacespython Not present, since the C++ assignment operators
+         * are not accessible to Python.
          */
         FaceEmbedding() = default;
 
