@@ -273,6 +273,11 @@ void addTriangulation3(pybind11::module_& m) {
         .def("generalAngleStructure",
             &Triangulation<3>::generalAngleStructure,
             pybind11::return_value_policy::reference_internal)
+        .def("hasGeneralAngleStructure",
+            &Triangulation<3>::hasGeneralAngleStructure)
+        .def("maximalForestInSkeleton",
+            &Triangulation<3>::maximalForestInSkeleton,
+            pybind11::return_value_policy::reference_internal)
         .def("intelligentSimplify", &Triangulation<3>::intelligentSimplify)
         .def("simplifyToLocalMinimum",
             &Triangulation<3>::simplifyToLocalMinimum,
